correction cursor pointer sur les collapses

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -33,6 +33,10 @@
       height: 52px;
   }
 
+  .collapse-header:hover {
+    cursor: pointer;
+  }
+
   .collapse-about {
     align-items: center;
     width: 80%;
