--- a/src/styles/Logement.scss
+++ b/src/styles/Logement.scss
@@ -105,7 +105,11 @@
         width: 46%;
         list-style: none;
         border-radius: 18px;
+
+        & :hover {
+            cursor: pointer
         }
+    }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
 
